<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, RiskRollerActivityActivity!</string>
    <string name="app_name">RiskRoller</string>
   
    <string name="log_row_header">Combat Log</string>
    
    <string name="combantant_heading">Combatants</string>
    <string name="default_army">0</string>
    <string name="reset_btn_txt">New Combat</string>
    <string name="roll_btn_1_txt">1</string>
    <string name="roll_btn_2_txt">2</string>
    <string name="roll_btn_3_txt">3</string>
    <string name="roll_btn_custom_txt">Custom Roll</string>
    
    <!-- Number picker -->
    <string name="dialog_set_number">Roll</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_picker_title">How many attackers do you want to use?</string>
</resources>