<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/risk_bg"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/combantant_heading"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold" >
    </TextView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/defender_count"
            android:layout_width="0dip"
            android:layout_weight="0.4"
            android:layout_height="wrap_content"
			android:gravity="center"
            android:text="@string/default_army"
            android:textColor="#0077FF"
            android:textSize="80sp" />
		<ImageView 
		  	android:id="@+id/icon"
		  	android:layout_width="0dip"
		  	android:layout_weight="0.2"/>
        <TextView
            android:id="@+id/attacker_count"
            android:layout_width="0dip"
            android:layout_weight="0.4"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/default_army"
            android:textColor="#EE0000"
            android:textSize="80sp"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/roll_btns"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/roll_one_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/roll_btn_1_txt"
                android:textSize="19sp" >
            </Button>

            <Button
                android:id="@+id/roll_two_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/roll_btn_2_txt"
                android:textSize="19sp" >
            </Button>

            <Button
                android:id="@+id/roll_three_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/roll_btn_3_txt"
                android:textSize="19sp" >
            </Button>

            <Button
                android:id="@+id/roll_custom_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/roll_btn_custom_txt"
                android:textSize="19sp" >
            </Button>
        </LinearLayout>

        <Button
            android:id="@+id/reset_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:text="@string/reset_btn_txt"
            android:textSize="17sp" >
        </Button>

        <ListView
            android:id="@+id/logTable"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/reset_btn"
            android:layout_below="@id/roll_btns"
            android:background="#66000000">
    </RelativeLayout>

</LinearLayout>